--- a/css/associati_ext.css
+++ b/css/associati_ext.css
@@ -6,7 +6,14 @@
  */
 
 header {
-	background: url("http://www.condominiodellarte.com/core/wp-content/uploads/slides-itinerante.jpg") transparent center center / cover fixed no-repeat;
+	background: url("../img/foto2.jpg") transparent center center / cover fixed no-repeat;
+	text-shadow: 0px 2px 2px black;
+}
+
+header hr {
+	border: 2px solid #fff;
+	margin: auto 10%;
+	box-shadow: 0px 2px 2px black;
 }
 
 section {
