--- a/css/home.css
+++ b/css/home.css
@@ -32,7 +32,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/intro-bg.jpg) fixed no-repeat center center;
     background-size: cover;
 }
 
@@ -113,7 +113,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/banner-bg.jpg) fixed no-repeat center center;
     background-size: cover;
 }
 
